<?xml version="1.0"?>
<package format="2">
  <name>timed_roslaunch</name>
  <version>0.1.0</version>
  <description>
    Script to delay the launch of a roslaunch file
  </description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/MoriKen254/timed_roslaunch.git</url>
  <url type="bugtrucker">https://github.com/MoriKen254/timed_roslaunch/issues</url>
  <author email="p595201m@mail.kyutech.jp">Masaru Morita</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend> <!-- this is for launch test -->
</package>
